--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="main.js"></script>
+  <div class="container">
+    <div class="column-full">
+      <div class="row">
+        <h1>Weekly Planner</h1>
+      </div>
+    </div>
+    <div class="row button-div">
+      <button type="button">Add Entry</button>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
