--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week Planner</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -13,9 +14,10 @@
         <h1>Weekly Planner</h1>
       </div>
     </div>
-    <div class="row button-div">
-      <button type="button">Add Entry</button>
+    <div id="add-button" class="row button-div">
+      <button id="add-entry" class="add-entry-button" type="button">Add Entry</button>
     </div>
+    <div class="back-ground-div"></div>
     <script src="main.js"></script>
 </body>
 </html>
