Finished entry submit form - Marvin

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           <div class="text-area">
             <textarea id="text-area" class="text-area">Description...</textarea>
           </div>
-
+          <div class="submit">
+            <button type="submit" id="submit-entry" class="submit-button">Submit</button>
+          </div>
         </form>
       </div>
     </div>
