--- a/index.html
+++ b/index.html
@@ -18,54 +18,56 @@
       <button id="add-entry" class="add-entry-button" type="button">Add Entry</button>
     </div>
     <div class="back-ground-div hidden"></div>
-    <div class="modal">
-      <div class="modal-title">
-        <h2 class="modal-title">Add Entry</h2>
-      </div>
-      <div class="form-container">
-        <form id="entry-form">
-          <div class="drop-down">
-            <select name="days" id="days">
-              <option value="DayOfWeek">Day of Week</option>
-              <option value="Monday">Monday</option>
-              <option value="Tuesday">Tuesday</option>
-              <option value="Wednesday">Wednesday</option>
-              <option value="Thursday">Thursday</option>
-              <option value="Friday">Friday</option>
-              <option value="Saturday">Saturday</option>
-              <option value="Sunday">Sunday</option>
-            </select>
-            <select name="time" id="time">
-              <option value="TimeofDay">Time</option>
-              <option value="0500">05:00</option>
-              <option value="0600">06:00</option>
-              <option value="0700">07:00</option>
-              <option value="0800">08:00</option>
-              <option value="0900">09:00</option>
-              <option value="1000">10:00</option>
-              <option value="1100">11:00</option>
-              <option value="1200">12:00</option>
-              <option value="1300">13:00</option>
-              <option value="1400">14:00</option>
-              <option value="1500">15:00</option>
-              <option value="1600">16:00</option>
-              <option value="1700">17:00</option>
-              <option value="1800">18:00</option>
-              <option value="1900">19:00</option>
-              <option value="2000">20:00</option>
-              <option value="2100">21:00</option>
-              <option value="2200">22:00</option>
-              <option value="2300">23:00</option>
-              <option value="0000">00:00</option>
-            </select>
-          </div>
-          <div class="text-area">
-            <textarea id="text-area" class="text-area">Description...</textarea>
-          </div>
-          <div class="submit">
-            <button type="submit" id="submit-entry" class="submit-button">Submit</button>
-          </div>
-        </form>
+    <div id="modal-hider" class="hidden">
+      <div class="modal">
+        <div class="modal-title">
+          <h2 class="modal-title">Add Entry</h2>
+        </div>
+        <div class="form-container">
+          <form id="entry-form">
+            <div class="drop-down">
+              <select name="days" id="days">
+                <option value="DayOfWeek">Day of Week</option>
+                <option value="Monday">Monday</option>
+                <option value="Tuesday">Tuesday</option>
+                <option value="Wednesday">Wednesday</option>
+                <option value="Thursday">Thursday</option>
+                <option value="Friday">Friday</option>
+                <option value="Saturday">Saturday</option>
+                <option value="Sunday">Sunday</option>
+              </select>
+              <select name="time" id="time">
+                <option value="TimeofDay">Time</option>
+                <option value="0500">05:00</option>
+                <option value="0600">06:00</option>
+                <option value="0700">07:00</option>
+                <option value="0800">08:00</option>
+                <option value="0900">09:00</option>
+                <option value="1000">10:00</option>
+                <option value="1100">11:00</option>
+                <option value="1200">12:00</option>
+                <option value="1300">13:00</option>
+                <option value="1400">14:00</option>
+                <option value="1500">15:00</option>
+                <option value="1600">16:00</option>
+                <option value="1700">17:00</option>
+                <option value="1800">18:00</option>
+                <option value="1900">19:00</option>
+                <option value="2000">20:00</option>
+                <option value="2100">21:00</option>
+                <option value="2200">22:00</option>
+                <option value="2300">23:00</option>
+                <option value="0000">00:00</option>
+              </select>
+            </div>
+            <div class="text-area">
+              <textarea id="text-area" class="text-area">Description...</textarea>
+            </div>
+            <div class="submit">
+              <button type="submit" id="submit-entry" class="submit-button">Submit</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
     <script src="main.js"></script>
