centered modal - sean

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button id="add-entry" class="add-entry-button" type="button">Add Entry</button>
     </div>
     <div class="back-ground-div hidden"></div>
-    <div id="modal-hider" class="hidden">
+    <div id="modal-hider" class="modal-hider hidden">
       <div class="modal">
         <div class="modal-title">
           <h2 class="modal-title">Add Entry</h2>
