Created day buttons and schedule table -Marvin

--- a/index.html
+++ b/index.html
@@ -14,8 +14,32 @@
         <h1>Weekly Planner</h1>
       </div>
     </div>
+    <div class="row">
+      <button id="sunday" class="day-button" type="button">Sunday</button>
+      <button id="monday" class="day-button" type="button">Monday</button>
+      <button id="tuesday" class="day-button" type="button">Tuesday</button>
+      <button id="wednesday" class="day-button" type="button">Wednesday</button>
+      <button id="thursday" class="day-button" type="button">Thursday</button>
+      <button id="friday" class="day-button" type="button">Friday</button>
+      <button id="saturday" class="day-button" type="button">Saturday</button>
+    </div>
     <div id="add-button" class="row button-div">
       <button id="add-entry" class="add-entry-button" type="button">Add Entry</button>
+    </div>
+    <div class="row">
+      <h3 id="table-title">Scheduled Events for Monday</h3>
+      <table>
+        <tbody>
+          <tr>
+            <th>Time</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>Empty Data</td>
+            <td>Empty Data</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <div class="back-ground-div hidden"></div>
     <div id="modal-hider" class="modal-hider hidden">
