--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
     </div>
     <div class="row">
       <h3 id="table-title">Scheduled Events for Monday</h3>
-      <table>
-        <tbody>
+      <table id="event-table" class="event-table">
+        <thead>
           <tr>
             <th>Time</th>
             <th>Description</th>
           </tr>
+        </thead>
+        <tbody>
           <tr>
             <td>Empty Data</td>
             <td>Empty Data</td>
