Rendering table data for entries - Marvin

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="row">
       <h3 id="table-title">Scheduled Events for Monday</h3>
-      <table id="event-table" class="event-table">
+      <table class="event-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -37,8 +37,12 @@
         </thead>
         <tbody>
           <tr>
-            <td>Empty Data</td>
-            <td>Empty Data</td>
+            <td>Cell</td>
+            <td>Cell</td>
+          </tr>
+          <tr>
+            <td>Cell</td>
+            <td>Cell</td>
           </tr>
         </tbody>
       </table>
