--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Weekly Planner</h1>
       </div>
     </div>
-    <div class="row">
+    <div class="row" id="button-row">
       <button id="sunday" class="day-button" type="button">Sunday</button>
       <button id="monday" class="day-button" type="button">Monday</button>
       <button id="tuesday" class="day-button" type="button">Tuesday</button>
@@ -36,14 +36,6 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Cell</td>
-            <td>Cell</td>
-          </tr>
-          <tr>
-            <td>Cell</td>
-            <td>Cell</td>
-          </tr>
         </tbody>
       </table>
     </div>
